--- a/App/WRPGconfig.json
+++ b/App/WRPGconfig.json
@@ -1,1 +1,1 @@
-{"apSlotName":"Witness","challengeTimer":false,"collect":false,"colorblind":false,"saveVersion":1}
+{"apSlotName":"Vitness","challengeTimer":false,"collect":false,"colorblind":false,"key_skipPuzzle":113,"saveVersion":1}
