--- a/App/WRPGconfig.json
+++ b/App/WRPGconfig.json
@@ -1,1 +1,1 @@
-{"apSlotName":"Witness","challengeTimer":false,"collect":false,"colorblind":true,"key_skipPuzzle":113,"saveVersion":1}
+{"apSlotName":"blastron","challengeTimer":false,"collect":"Auto-Skip","colorblind":false,"disabled":"Prevent Solve","highcontrast":false,"key_skipPuzzle":116,"key_speedBoost":9,"saveVersion":4,"syncprogress":false}
