Understated final panel hunt

--- a/App/App.vcxproj
+++ b/App/App.vcxproj
@@ -261,6 +261,7 @@
     <Media Include="..\Music\Panel Hunt 11.ogg" />
 	<Media Include="..\Music\Panel Hunt Final.ogg" />
     <Media Include="..\Music\Panel Hunt Understated.ogg" />
+    <Media Include="..\Music\Panel Hunt Understated Final.ogg" />
     <Media Include="..\Music\Panel Progression 1.ogg" />
     <Media Include="..\Music\Panel Progression 2.ogg" />
     <Media Include="..\Music\Panel Progression 3.ogg" />
